tools/tests/errors/unterminated_triple.ki
var s = """started but never closed
more text
